# simple-qdynamics-numpy

./: .gitignore  animate.sh  main.py
eig-crate/: Cargo.toml  test.py
eig-crate/src/: lib.rs
