[package]
name = "eig-crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "eig_crate"
crate-type = ["cdylib"]
eigenvalues = "0.4.0"

[dependencies]
numpy = "0.20.0"
pyo3 = { version = "0.20.2", features = ["extension-module"] }
